.metadata/.plugins/org.eclipse.cdt.ui/sensor_hub_108.build.log
09:03:18 **** Incremental Build of configuration Release for project sensor_hub_108 ****
make 
APP_NAME = sensor_hub_108
SOC = quark_se
TARGET = x86
APP_DIR = .
BUILD = release
CSTD = c99
VERSION = '1.4.0'
make -C ./bsp/drivers SOC=quark_se TARGET=x86 BUILD=release V=0 CSTD=c99 ITA_NO_ASSERT=0
BUILD = release
CSTD = c99
VERSION = '1.4.0'
make[1]: Entering directory `C:/IntelSWTools/ISSM_2016.2.094/workspace2/sensor_hub_108/bsp/drivers'
make[1]: Leaving directory `C:/IntelSWTools/ISSM_2016.2.094/workspace2/sensor_hub_108/bsp/drivers'
"CC release/quark_se/x86/obj/./main.o" 
"CC release/quark_se/x86/obj/"."/app_entry.o" 
"CC release/quark_se/x86/obj/"."/newlib-syscalls.o" 
"CC release/quark_se/x86/obj/pm25_hpma115.o" 
sensor_hub_lib/sensors/pm25_hpma115.c: In function 'get_pm25_hpma115':
sensor_hub_lib/sensors/pm25_hpma115.c:96:22: error: iteration 31u invokes undefined behavior [-Werror=aggressive-loop-optimizations]
       uart1_raw[k+1] = uart_buffer;
                      ^
sensor_hub_lib/sensors/pm25_hpma115.c:92:6: note: containing loop
      for (k=0;k<32;k++)
      ^
sensor_hub_lib/sensors/pm25_hpma115.c:115:9: error: 'pm25_hpma115_int' may be used uninitialized in this function [-Werror=maybe-uninitialized]
  return pm25_hpma115_int;
         ^
cc1.exe: all warnings being treated as errors
make: *** [release/quark_se/x86/obj/pm25_hpma115.o] Error 1

09:03:20 Build Finished (took 2s.474ms)

